# lingfo

./: .gitignore  .pylintrc  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.cfg  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: ci.yml  publish.yml  pylint.yml  sonar.yml  test.yml
examples/: readme.md
examples/arg-cpp/: app.py  sushi.conf
examples/arg-cpp/lib/: main.hpp  out
examples/cpp/: app.py  lingfo.conf  sushi.conf
examples/cpp/lib/: main.hpp
examples/math-c/: app.py  lingfo.conf  sushi.conf
examples/math-c/lib/: main.h
src/: __init__.py  execute.py  index.py
src/cache/: cache_template  main.py
src/config/: extends.py
src/lingfo/: execute.py  git.py  index.py  main.py  one_compile.py  stores.py
src/lingfo/cache/: cache_template.py  main.py
src/lingfo/config/: auto_detect.py  extends.py
src/lingfo/scripts/: git_init.ps1  git_init.sh
src/lingfo/utils/: rich_print.py  variables.py  verbose_print.py
src/sushipy/: __init__.py  execute.py  git.py  index.py  main.py  one_compile.py  stores.py
src/sushipy/cache/: cache_template  cache_template.py  main.py
src/sushipy/config/: auto_detect.py  extends.py
src/sushipy/scripts/: git_init.ps1  git_init.sh
src/sushipy/utils/: find_dict.py  variables.py  verbose_print.py
tests/: test_execute.py
