[metadata]
name = sushipy
version = 0.1.72
author = ksawery29
author_email = sushicontact1@gmail.com
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/dev-sushi/sushi
project_urls =
    Bug Tracker = https://github.com/dev-sushi/sushi/issues
license = MIT

[options]
package_dir =
    = src

python_requires = >=3.9
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    sushipy = sushipy.main:main

[options.packages.find]
where = src

[options.package_data]
sushipy = scripts/*