[metadata]
name = sushipy
version = 0.1.78
author = ksawery29
author_email = sushicontact1@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dev-sushi/sushi
project_urls =
    Bug Tracker = https://github.com/dev-sushi/sushi/issues
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
sushipy = scripts/*
