[metadata]
name = lingfo
version = 0.2.25
author = ksawery29
author_email = lingfocontact1@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lingfo/lingfo
project_urls =
    Bug Tracker = https://github.com/lingfo/lingfo/issues
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
lingfo = scripts/*
